--- a/app/views/documentation/api_examples/_php.html.haml
+++ b/app/views/documentation/api_examples/_php.html.haml
@@ -5,12 +5,12 @@
     #!php
     <?php
     $morph_api_url = "[scraper_url]/data.json";
-    $morph_api_key="[api_key]";
+    $morph_api_key = "[api_key]";
 
-    $query="[query]";
+    $query = "[query]";
 
-    $response=file_get_contents($morph_api_url.'?key='.$morph_api_key.'&query='.urlencode($query));
-    $js=json_decode($response,true);
+    $response = file_get_contents($morph_api_url.'?key='.$morph_api_key.'&query='.urlencode($query));
+    $js = json_decode($response,true);
 
     print_r($js);
     ?>
