--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -19,9 +19,14 @@
           and #{link_to "Perl", "http://www.perl.org/"} are all supported
       .col-md-4
         %i.fa.fa-recycle.fa-5x
-        %h4 Over 2000 scrapers with more than 36 million rows of data
+        %h4
+          Over
+          = Scraper.rounded_count
+          scrapers with more than 36 million rows of data
         %p
-          Over 2000 public scrapers, with lots of data, available for you to reuse, for free. Download data as a CSV or use the super-simple API.
+          Over
+          = Scraper.rounded_count
+          public scrapers, with lots of data, available for you to reuse, for free. Download data as a CSV or use the super-simple API.
       .col-md-4
         %i.fa.fa-cloud.fa-5x
         %h4 Set it up and forget about it
