Cache value for number of rows of data

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -23,7 +23,8 @@
           Over
           = Scraper.rounded_count
           scrapers with more than
-          = Morph::VanityStats.rounded_total_database_rows_in_millions
+          - cache ['v1', 'rounded_total_database_rows_in_millions'], expires_in: 1.week do
+            = Morph::VanityStats.rounded_total_database_rows_in_millions
           million rows of data
         %p
           Over
