--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -15,8 +15,12 @@
         %i.fa.fa-language.fa-5x
         %h4 Speaks your language
         %p
-          Write in your scraper in the language you know and love because #{link_to "Ruby",       "https://www.ruby-lang.org"}, #{link_to "Python", "http://www.python.org"}, #{link_to "PHP", "http://www.php.net"}
-          and #{link_to "Perl", "http://www.perl.org/"} are all supported
+          Write in your scraper in the language you know and love because
+          #{link_to "Ruby", "https://www.ruby-lang.org"},
+          #{link_to "Python", "http://www.python.org"},
+          #{link_to "PHP", "http://www.php.net"},
+          #{link_to "Perl", "http://www.perl.org/"} and
+          #{link_to "Node.js", "https://nodejs.org/"} are all supported
       .col-md-4
         %i.fa.fa-recycle.fa-5x
         %h4
