--- a/app/views/users/stats.html.haml
+++ b/app/views/users/stats.html.haml
@@ -106,16 +106,17 @@
     max_number_scrapers = d3.max(users, (u) -> u.number_scrapers )
 
     # Generate a histogram with power of two ranges. e.g:
-    # (0..1), (1..2), (2..4), (4..8), etc
-    p = Math.ceil(Math.log(max_number_scrapers) / Math.log(2))
-    bins = d3.range(0, p + 1).map (x) -> 2 ** x
-    bins.unshift(0)
+    # (0, 1, 3, 7, 15, ..)
+    # (2**0-1, 2**1-1, 2**2-1, 2**3-1, ...)
+    # Each bin holds twice the number of numbers as the previous one
+    p = Math.ceil(Math.log(max_number_scrapers + 1) / Math.log(2))
+    bins = d3.range(0, p + 1).map (x) -> 2 ** x - 1
 
     data = d3.layout.histogram()
       .value((u) -> u.number_scrapers)
       .bins(bins)(users)
 
-    x.domain([0, 2 ** p])
+    x.domain([0, 2 ** p - 1])
     y.domain([0, d3.max(data, (d) -> d.y)])
 
     xAxis = d3.svg.axis()
