Use same sqrt scale in x and y

--- a/app/views/users/stats.html.haml
+++ b/app/views/users/stats.html.haml
@@ -100,8 +100,8 @@
     width = 960 - (margin.left) - (margin.right)
     height = 300 - (margin.top) - (margin.bottom)
 
-    x = d3.scale.linear().range([0, width])
-    y = d3.scale.pow().exponent(0.4).range([height, 0])
+    x = d3.scale.sqrt().range([0, width])
+    y = d3.scale.sqrt().range([height, 0])
 
     max_number_scrapers = d3.max(users, (u) -> u.number_scrapers )
 
