--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -192,7 +192,7 @@
         }
 
   %body(bgcolor="#f6f6f6")
-    - unless @user.alerted_at
+    - if @user.never_alerted?
       %table.body-wrap
         %tr
           %td
