Remove mention of first alert from never alerted mail header
This means people with alerts set up won't be confused and it doesn't
change the helpful content of the message for new users.

--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -202,7 +202,7 @@
                 %tr
                   %td(align="center")
                     %p
-                      Hello and welcome to your first morph.io alert email.
+                      Hello and welcome to your morph.io alert email.
                       You're getting this because you signed up for morph.io and a scraper you're watching has a problem that you might like to fix.
                     %p
                       Rather not get these emails? Then
