Update wording with feedback from @equivalentideas

--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -4,7 +4,7 @@ Hello and welcome to your first morph.io alert email.
 You're getting this because you signed up for morph.io and a scraper you're
 watching has a problem that you might like to fix.
 
-Rather not get these emails? Then change what you're watching:
+Rather not get these emails? You can unwatch scrapers anytime:
 <%= watching_user_url(@user, @analytics_params) %>
 
 <% end %>
