Also update text email template
Missed in dfa8c8474c9bbffabf9bafd4abdf7d50a7ff265d

--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -1,5 +1,5 @@
 <% if @user.never_alerted? %>
-Hello and welcome to your first morph.io alert email.
+Hello and welcome to your morph.io alert email.
 
 You're getting this because you signed up for morph.io and a scraper you're
 watching has a problem that you might like to fix.
