Fix long standing typo on landing page

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -15,7 +15,7 @@
         %i.fa.fa-language.fa-5x
         %h4 Speaks your language
         %p
-          Write in your scraper in the language you know and love because
+          Write your scraper in the language you know and love because
           #{link_to "Ruby", "https://www.ruby-lang.org"},
           #{link_to "Python", "http://www.python.org"},
           #{link_to "PHP", "http://www.php.net"},
