--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -3,7 +3,8 @@
     .panel-heading
       %h3.panel-title Here be dragons!
     .panel-body
-      %p These can't be undone
+      %p
+        %strong These can't be undone
     %ul.list-group
       %li.list-group-item
         %h4 Clear this scraper’s database
