--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -4,7 +4,7 @@
       %h3.panel-title Here be dragons!
     .panel-body
       %p
-        %strong These can't be undone
+        %strong Watch out! These actions can't be undone.
     %ul.list-group
       %li.list-group-item
         %h4 Clear this scraper’s database
