--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -9,8 +9,10 @@
       %li.list-group-item
         %h4 Clear this scraper’s database
         %p All your data will be gone!
-        = button_to "Clear database", clear_scraper_path(@scraper), {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
+        = button_to "Clear database", clear_scraper_path(@scraper),
+          {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
       %li.list-group-item
         %h4 Delete this scraper
         %p Delete the entire scraper from morph.io, data and all.
-        = button_to "Delete scraper", @scraper, {method: :delete, class: "btn btn-danger", data: {confirm: "Delete #{@scraper.full_name}?"}}
+        = button_to "Delete scraper", @scraper,
+          {class: "btn btn-danger", method: :delete, data: {confirm: "Delete #{@scraper.full_name}?"}}
