Slow the user down as they read the danger options
Use the layout to encourage the user to read the descriptions of
the dangerous options, so they better understand what's going to
happen once they act. Making the wrong choice here could mean
the user looses data they’ve scraped irretrievably, so we should
help them slow down and consider.

This commit moves the buttons to the right hand side of the box
on wide screens, away from the text descriptions, so the user’s
eye has to jump back across to read and make sure they're picking
the correct option.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -402,3 +402,38 @@ a i.fa {
 .filter-option img, .selectpicker img {
   margin-right: 0.5em;
 }
+
+.danger-settings-options-list {
+  .list-group-item {
+    padding-bottom: 1em;
+
+    @media (min-width: $screen-xs-min) {
+      @include clearfix;
+    }
+  }
+
+  h4 {
+    @media (min-width: 35em) {
+      margin-bottom: 0;
+    }
+  }
+
+  p {
+    @media (min-width: $screen-xs-min) {
+       margin-bottom: 0;
+       float: left;
+       max-width: 20em;
+    }
+
+    @media (min-width: 35em) {
+       margin-top: $panel-body-padding;
+       max-width: none;
+    }
+  }
+
+  .btn {
+    @media (min-width: $screen-xs-min) {
+       float: right;
+    }
+  }
+}
