--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -5,7 +5,7 @@
     .panel-body
       %p
         %strong Watch out! These actions can't be undone.
-    %ul.list-group
+    %ul.danger-settings-options-list.list-group
       %li.list-group-item
         %h4 Clear this scraper’s database
         %p All your data will be gone!
