Make the copy calmer, it's a bit shouty with all these "!"

--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -4,7 +4,7 @@
       %h3.panel-title Here be dragons!
     .panel-body
       %p
-        %strong Watch out! These actions can't be undone.
+        %strong Be careful here, these actions can't be undone.
     %ul.danger-settings-options-list.list-group
       %li.list-group-item
         %h4 Clear this scraper’s database
