--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -12,9 +12,9 @@
             %h4 Clear this scraper’s database
             %p All your data will be gone!
             = button_to "Clear database", clear_scraper_path(@scraper),
-              {class: "btn btn-danger", data: {confirm: "All your data will be gone!"}}
+              {class: "btn btn-danger", data: {confirm: "All the data you’ve scraped will be deleted. Are you sure you want to clear this scraper’s database?"}}
           %li.list-group-item
             %h4 Delete this scraper
             %p Delete the entire scraper from morph.io, data and all.
             = button_to "Delete scraper", @scraper,
-              {class: "btn btn-danger", method: :delete, data: {confirm: "Delete #{@scraper.full_name}?"}}
+              {class: "btn btn-danger", method: :delete, data: {confirm: "Scraper #{@scraper.full_name} and its database will be deleted from morph.io. Are you sure you want to delete your scraper?"}}
