Add Perl documentation for running scraper locally

--- a/app/views/documentation/run_locally/_perl.html.haml
+++ b/app/views/documentation/run_locally/_perl.html.haml
@@ -1,1 +1,14 @@
-= render "missing_documentation"
+:markdown
+  1. [Install Perl](https://www.perl.org/get.html)
+
+  2. Fork and clone the scraper you're going to work on:
+  <pre>
+  git clone git@github.com:yourname/example.git
+  cd example
+  </pre>
+
+  3. If there is `cpanfile` in the repository, install packages with modules in your distribution, or install each module from that file like:
+  <pre>cpan module</pre>
+
+  4. Run the scraper locally:
+  <pre>perl scraper.py</pre>
