--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -20,3 +20,24 @@
           Add variable
   - if can? :update, @scraper
     = f.button :submit, "Update"
+
+  %h3 Webhooks
+  .row
+    .col-sm-3
+      %label URL
+  #webhooks
+    = f.fields_for :webhooks do |webhook_form|
+      .nested-fields
+        .row
+          .col-sm-3
+            = webhook_form.input :url, input_html: {class: "url"}
+          .col-sm-1
+            = link_to_remove_association webhook_form do
+              %i.fa.fa-times-circle.fa-2x
+    .links
+      - if can? :update, @scraper
+        = link_to_add_association f, :webhooks do
+          %i.fa.fa-plus-circle.fa-2x
+          Add webhook
+  - if can? :update, @scraper
+    = f.button :submit, "Update"
