Add documentation for webhooks
This adds a brief explanation on the settings page and links through to
the full documentation section about webhooks.

--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -22,6 +22,9 @@
     = f.button :submit, "Update"
 
   %h3 Webhooks
+  %p
+    We'll make an HTTP POST request to each webhook url whenever this scraper finishes running.
+    = link_to 'Read documentation', webhooks_documentation_index_path
   .row
     .col-sm-3
       %label URL
