--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -10,6 +10,7 @@
           = bs_nav_link 'Using any library in your scraper', libraries_documentation_index_path
           = bs_nav_link 'Choose language version', language_version_documentation_index_path
           = bs_nav_link 'Secret values', secret_values_documentation_index_path
+          = bs_nav_link 'Webhooks', webhooks_documentation_index_path
           = bs_nav_link "Scraping JavaScript heavy sites", scraping_javascript_sites_documentation_index_path
           = bs_nav_link "Moving from ScraperWiki Classic", scraperwiki_documentation_index_path
           = bs_nav_link "How to use the API", api_documentation_index_path
