Add last delivery status icon to webhooks
To indicate the status of a webhook this change adds an icon next to
each webhook to show whether the last delivery was success, failure or
unknown. It will only be unknown if there haven't been any deliveries
yet.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -236,6 +236,21 @@ span.internalout {
   margin-bottom: 4em;
 }
 
+#webhooks {
+  .webhook-status {
+    &.success {
+      color: #6cc644;
+    }
+    &.failure {
+      color: #bd2c00;
+    }
+  }
+
+  .tooltip-inner {
+    max-width: 400px;
+  }
+}
+
 #scraper_run input {
   width: 200px;
 }
