Docs for running node.js scraper locally.

--- a/app/views/documentation/run_locally/_nodejs.html.haml
+++ b/app/views/documentation/run_locally/_nodejs.html.haml
@@ -1,1 +1,14 @@
-= render "missing_documentation"
+:markdown
+  1. Install [Node.js](https://nodejs.org/) and [npm](https://www.npmjs.com/).
+
+  2. Clone the scraper you're going to work on:
+  <pre>
+  git clone git@github.com:yourname/example.git
+  cd example
+  </pre>
+
+  5. Use `npm` to install the dependencies:
+  <pre>npm install</pre>
+
+  6. Run the scraper locally:
+  <pre>node scraper.js</pre>
