--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -23,7 +23,7 @@
 
   %h3 Webhooks
   %p
-    We’ll make an HTTP POST request to each webhook url every time this scraper finishes a run.
+    We’ll make an HTTP POST request to each webhook URL every time this scraper finishes a run.
     = link_to 'Read documentation', webhooks_documentation_index_path
   .row
     .col-sm-3
