Use more specific words to describe the process

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -3,7 +3,7 @@
 
   You can use webhooks to trigger actions in external services
   every time one of your scrapers finish a run.
-  You can use this to do all kind of things:
+  You can trigger all kind of actions:
   send emails when a scraper is finished;
   immediately pull fresh data from a scraper’s API;
   or run realtime analysis—anything you like really.
