Link to wikipedia’s good description of post requests
This page has a good explanation of how data can be passed through post
requests. This will be really useful to users who aren't too savvy with
all this.

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -11,7 +11,8 @@
   Add *webhook URLs* under the **Webhooks heading
   on your scraper’s Settings page**.
   Every time your scraper finishes a run
-  we’ll make an HTTP POST request to each URL you’ve added.
+  we’ll make an [HTTP POST request](https://en.wikipedia.org/wiki/POST_(HTTP))
+  to each URL you’ve added.
   Use this request to trigger your custom code.
 
   ## Payloads
