--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -2,7 +2,7 @@
   # Webhooks
 
   You can use webhooks to trigger actions in external services
-  every time one of your scrapers finish a run.
+  every time one of your scrapers finishes a run.
   You can trigger all kind of fun actions:
   send emails when a scraper is finished;
   immediately pull fresh data from a scraper’s API;
