Cut unnecessary word

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -6,7 +6,7 @@
   You can trigger all kind of fun actions:
   send emails when a scraper is finished;
   immediately pull fresh data from a scraper’s API;
-  or run realtime analysis—anything you like really.
+  or run realtime analysis—anything you like.
 
   Add *webhook URLs* under the **Webhooks heading
   on your scraper’s Settings page**.
