--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -17,10 +17,12 @@
 
   ## Payloads
 
-  Webhooks currently just make an empty HTTP POST request to the specified url.
-  If you'd like the webhooks to have some state you'll need to put that state in
-  the webhook url, either as the path or as GET parameters. If there's something
-  specific you'd like included in the webhook payload then please
-  [ask a question on our help forum](https://help.morph.io/).
+  Webhooks currently just make an empty HTTP POST request
+  to the specified url.
+  If you'd like the webhooks to have some state
+  you'll need to put that state in the webhook url,
+  either as the path or as GET parameters.
+  If there's something specific you'd like included in the webhook payload
+  then please [ask a question on our help forum](https://help.morph.io/).
 
 
