Use consistent formatting or URL throughout the Webhooks docs

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -18,9 +18,9 @@
   ## Payloads
 
   Webhooks currently just make an empty HTTP POST request
-  to the specified url.
+  to the specified URL.
   If you'd like the webhooks to have some state
-  you'll need to put that state in the webhook url,
+  you'll need to put that state in the webhook URL,
   either as the path or as GET parameters.
   If there's something specific you'd like included in the webhook payload
   then please [ask a question on our help forum](https://help.morph.io/).
