Make sentence more active and refer to URL as 'webhook URL' as elsewhere

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -17,8 +17,8 @@
 
   ## Payloads
 
-  Webhooks currently just make an empty HTTP POST request
-  to the specified URL.
+  We currently just make an empty HTTP POST request
+  to the specified webhook URL.
   If you'd like the webhooks to have some state
   you'll need to put that state in the webhook URL,
   either as the path or as GET parameters.
