'State' is insider jargon, use more generally meaningful term 'information'
This sentence is very jargony. This commit tries to spell out the
process in more basic terms so people understand it better.

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -19,8 +19,8 @@
 
   We currently just make an empty HTTP POST request
   to your specified webhook URLs.
-  If you’d like the webhooks to have some state
-  you’ll need to put that state in the webhook URL,
+  If you’d like to pass some information through the request
+  you’ll need to put it in the webhook URL,
   either as the path or as GET parameters.
   If there’s something specific you’d like included in the webhook payload
   then please [ask a question on our help forum](https://help.morph.io/).
