Use 'send' rather than 'pass', it's a bit of a clearer verb here

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -19,7 +19,7 @@
 
   We currently just make an empty HTTP POST request
   to your specified webhook URLs.
-  You can pass information through the request
+  You can send information through the request
   by putting it in the webhook URL,
   either as the path or as GET parameters.
   If there’s something specific you’d like included in the webhook payload
