Clarify and link first 'payloads' sentence to the heading

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -18,7 +18,9 @@
   ## Payloads
 
   We currently just make an empty HTTP POST request
-  to your specified webhook URLs.
+  to your specified webhook URLs;
+  no information about the scraper run
+  is added as a payload.
   You can send information through the request
   by putting it in the webhook URL,
   either as the path or as GET parameters.
