Use more common language so it's clearer and consistent

--- a/app/views/documentation/webhooks.html.haml
+++ b/app/views/documentation/webhooks.html.haml
@@ -2,7 +2,7 @@
   # Webhooks
 
   You can use webhooks to trigger actions in external services
-  every time one of your scrapers finishes a run.
+  every time one of your scrapers finishes running.
   You can trigger all kind of fun actions:
   send emails when a scraper is finished;
   immediately pull fresh data from a scraper’s API;
@@ -10,7 +10,7 @@
 
   Add *webhook URLs* under the **Webhooks heading
   on your scraper’s Settings page**.
-  Every time your scraper finishes a run
+  Every time your scraper finishes running
   we’ll make an [HTTP POST request](https://en.wikipedia.org/wiki/POST_(HTTP))
   to each URL you’ve added.
   Use this request to trigger your custom code.
