--- a/app/views/documentation/storing_data/_nodejs.html.haml
+++ b/app/views/documentation/storing_data/_nodejs.html.haml
@@ -1,7 +1,7 @@
 :markdown
-  The `sqlite3` Node module makes it easy to store data in an SQLite database.
+  The [`sqlite3` Node module](https://www.npmjs.com/package/sqlite3) makes it easy to store data in an SQLite database.
 
-  To save data all you need to do is use the [`sqlite3` module](https://www.npmjs.com/package/sqlite3).
+  To save data all you need to do is use the `sqlite3` module.
 
 :coderay
   #!javascript
