Add some links to the docs so people can dig in if they need to
Particularly important since the link to the docs isn't very clear on
the module page we link to.

--- a/app/views/documentation/storing_data/_nodejs.html.haml
+++ b/app/views/documentation/storing_data/_nodejs.html.haml
@@ -2,8 +2,9 @@
   The [`sqlite3` Node module](https://www.npmjs.com/package/sqlite3) makes it easy to store data in an SQLite database.
 
   To save data all you need to do is use the `sqlite3` module
-  to create your database and table, and then use the `prepare`, `run`,
-  and `finalize` functions to insert new records.
+  to create your database and table, and then use the [`prepare`](https://github.com/mapbox/node-sqlite3/wiki/API#databasepreparesql-param--callback),
+  [`run`](https://github.com/mapbox/node-sqlite3/wiki/API#databaserunsql-param--callback),
+  and [`finalize`](https://github.com/mapbox/node-sqlite3/wiki/API#statementfinalizecallback) functions to insert new records.
 
 :coderay
   #!javascript
