--- a/app/views/static/_featured_supporters.html.haml
+++ b/app/views/static/_featured_supporters.html.haml
@@ -6,7 +6,7 @@
           %small.pre-heading Supporters of morph.io
           = link_to plan.name.pluralize, new_supporter_path
         %ul.owner-list-simple.list-unstyled.list-inline
-          - Owner.supporters(plan).each do |owner|
+          - Owner.supporters(plan).shuffle.each do |owner|
             %li.owner-item= link_to owner_image(owner, 60), owner
 .row
   .col-xs-12
