--- a/app/views/sync/scrapers/_scraper_without_owner.html.haml
+++ b/app/views/sync/scrapers/_scraper_without_owner.html.haml
@@ -1,1 +1,1 @@
-= render partial: "scrapers/scraper_base", locals: {scraper: scraper, hide_owner: true, show_errored_detail: true}
+= render partial: "scrapers/scraper_base", locals: {scraper: scraper, hide_owner: true, show_errored_detail: (scraper.requires_attention? || scraper.latest_successful_run_time.nil?)}
