Equalise the whitepace inside each scraper listing, regardless of whether there is an error message

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -361,6 +361,7 @@ a i.fa-clock-o {
     color: $alert-danger-text;
     background-color: lighten($alert-danger-bg, 5%);
   }
+  .padded-for-error-false .details {margin-bottom: 10px}
 }
 
 h1.full_name {
