Display the three types of scrapers (running, erroring and others) in one list with consistent formatting

--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -56,9 +56,10 @@
 
   - else
     %h3= pluralize(@scrapers.count, "scraper")
-    .list-group= sync partial: "scraper_without_owner", collection: @running_scrapers
-    .list-group= sync partial: "scraper_without_owner", collection: @erroring_scrapers
-    .scraper-alerts-list.list-group= sync partial: "scraper_without_owner", collection: @other_scrapers.sort{|a,b| b.updated_at <=> a.updated_at}
+    %div.scraper-alerts-list.list-group
+      = sync partial: "scraper_without_owner", collection: @running_scrapers
+      = sync partial: "scraper_without_owner", collection: @erroring_scrapers
+      = sync partial: "scraper_without_owner", collection: @other_scrapers.sort{|a,b| b.updated_at <=> a.updated_at}
 
   - if @owner == current_user || @owner.organization? && @owner.users.include?(current_user)
     = button_link_to "New scraper", new_scraper_path
