--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -57,9 +57,7 @@
   - else
     %h3= pluralize(@scrapers.count, "scraper")
     %div.scraper-alerts-list.list-group
-      = sync partial: "scraper_without_owner", collection: @running_scrapers
-      = sync partial: "scraper_without_owner", collection: @erroring_scrapers
-      = sync partial: "scraper_without_owner", collection: @other_scrapers.sort{|a,b| b.updated_at <=> a.updated_at}
+      = sync partial: "scraper_without_owner", collection: @scrapers
 
   - if @owner == current_user || @owner.organization? && @owner.users.include?(current_user)
     = button_link_to "New scraper", new_scraper_path
