--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -12,7 +12,7 @@
             %h4 Clear your scraper’s database
             %p All your data will be gone!
             = button_to "Clear database", clear_scraper_path(@scraper),
-              {class: "btn btn-danger",
+              {class: "btn btn-warning",
                 data: {confirm: "All the data you’ve scraped will be deleted. Are you sure you want to clear your scraper’s database?"}}
           %li.list-group-item
             %h4 Delete your scraper
