--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -432,6 +432,8 @@ a i.fa {
   }
 
   .btn {
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
+
     @media (min-width: $screen-xs-min) {
        float: right;
     }
