Add id to target section

--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -1,7 +1,7 @@
 - if can? :destroy, @scraper
   .row
     .col-md-8
-      .panel.panel-danger
+      .panel.panel-danger#danger-settings
         .panel-heading
           %h3.panel-title Here be dragons!
         .panel-body
