Move panel description into heading section
This moves the text describing the dangerous settings into the same
section of the panel as the heading. Looks much neater and this
important text is more prominent.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -403,6 +403,19 @@ a i.fa {
   margin-right: 0.5em;
 }
 
+#danger-settings {
+  .panel-title {
+    margin-bottom: .5em;
+  }
+
+  .panel-heading {
+    p {
+      margin: 0;
+      color: $text-color;
+    }
+  }
+}
+
 .danger-settings-options-list {
   .list-group-item {
     padding-bottom: 1em;
