Cut useless word

--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -5,7 +5,7 @@
         .panel-heading
           %h3.panel-title Here be dragons!
           %p
-            %strong Be careful here, these actions can't be undone.
+            %strong Be careful, these actions can't be undone.
         %ul.danger-settings-options-list.list-group
           %li.list-group-item
             %h4 Clear your scraper’s database
