--- a/app/views/scrapers/running.html.haml
+++ b/app/views/scrapers/running.html.haml
@@ -1,5 +1,5 @@
 .container
   .row
     .col-xs-12
-      %h1 Scrapers currently running
+      %h1 #{pluralize(@scrapers.count, "scraper")} currently running
       .list-group= sync partial: "scraper", collection: @scrapers
