Add icons for illustration and quick recognition of concept

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -451,5 +451,10 @@ a i.fa {
     @media (min-width: $screen-xs-min) {
        float: right;
     }
+
+    i {
+      padding-left: .25em;
+      vertical-align: text-top;
+    }
   }
 }
