Describe the subject of the delete action to make it more meaningful
To help people understand what the 'Clear database' action does,
by displaying the actual data (the thing users care about) that
is being removed.

This also presents the opportunity to double check before this
irreversible action:

> Is that really how much data I've collected?
> Maybe I should back it up first.

--- a/app/views/scrapers/_danger.html.haml
+++ b/app/views/scrapers/_danger.html.haml
@@ -9,7 +9,12 @@
         %ul.danger-settings-options-list.list-group
           %li.list-group-item
             %h4 Clear your scraper’s database
-            %p All your data will be gone!
+            %p
+              - if @scraper.has_data?
+                Your #{pluralize(@scraper.sqlite_total_rows, "row")}
+                of scraped data will be gone!
+              - else
+                All your data will be gone!
             = button_to clear_scraper_path(@scraper), {class: "btn btn-warning", data: {confirm: "All the data you’ve scraped will be deleted. Are you sure you want to clear your scraper’s database?"}} do
               Clear database
               %i.glyphicon.glyphicon-th-list
