Darken the button background to increase text readability

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -449,4 +449,13 @@ a i.fa {
       vertical-align: text-top;
     }
   }
+
+  .btn-warning {
+    background-color: darken($btn-warning-bg, 7);
+
+    &:hover,
+    &:focus {
+      background-color: darken($btn-warning-bg, 12);
+    }
+  }
 }
