--- a/app/views/documentation/language_version/_nodejs.html.haml
+++ b/app/views/documentation/language_version/_nodejs.html.haml
@@ -1,1 +1,9 @@
-= render "missing_documentation"
+:markdown
+  To set the version of Node.js you want to use and to install packages from npm,
+  edit the `package.json` file in the root of your scraper repository.
+
+  For instance, to use Node.js 4.1.1, your `package.json` could look like this:
+
+  #{ render 'documentation/libraries/nodejs_example2.html.haml' }
+
+  There are a limited number of Node.js versions that are supported. See the [list at Heroku Node.js support](https://devcenter.heroku.com/articles/nodejs-support#node-js-runtimes).
