--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     - if @load_stripe_library
       = javascript_include_tag "https://checkout.stripe.com/checkout.js"
     = javascript_include_tag "application"
-    = javascript_include_tag Sync.adapter_javascript_url
+    = include_sync_config
     = render "heap_analytics"
 
   %body
