Fix login path due to devise/omniauth updates

--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -90,7 +90,7 @@
           %label.control-label.col-sm-2(for="api_key") [api_key]
           .col-sm-10
             %p#api_key
-              = button_link_to "sign in with GitHub", user_omniauth_authorize_path(:github)
+              = button_link_to "sign in with GitHub", user_github_omniauth_authorize_path
 
 %h2 Example
 %p
