--- a/app/views/scrapers/_data_download_links.html.haml
+++ b/app/views/scrapers/_data_download_links.html.haml
@@ -2,7 +2,7 @@
   - unless signed_in?
     %p
       To download data
-      = button_link_to "sign in with GitHub", user_omniauth_authorize_path(:github)
+      = button_link_to "sign in with GitHub", user_github_omniauth_authorize_path
   .btn-group
     = button_link_to "Download table (as CSV)", data_scraper_path(scraper, format: :csv, query: scraper.database.select_all(table), key: (current_user.api_key if current_user)), disabled: !signed_in?
     = button_link_to "Download SQLite database (#{number_to_human_size scraper.sqlite_db_size})", data_scraper_path(scraper, :format => :sqlite, key: (current_user.api_key if current_user)), disabled: !signed_in?
