--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -3,7 +3,7 @@
     %h2 Take the hassle out of web&nbsp;scraping
     .lower
       %h3 With all the power so you&nbsp;can scrape anything,&nbsp;anywhere
-      = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-success btn-lg", id: "get_started_btn"
+      = link_to "Get started", user_github_omniauth_authorize_path, class: "call-to-action btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}", {fade: "slow"});
@@ -48,7 +48,7 @@
         :markdown
           #{render "introducing.md"}
 
-        = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
+        = link_to "Get started", user_github_omniauth_authorize_path, class: "call-to-action btn btn-default btn-lg"
 
 .banner.banner-quotes#quotes
   .container
