Size of header search made consistent
This commit aims to fix the issue https://github.com/openaustralia/morph/issues/585
The width of the header search becomes small at the wider end of the screen, i.e., for widths between 768px to 1200px. 
For small (<768) and large (>1200) width screens, the search bar size was already consistent.
In this commit, search bar width has been made consistent for medium width screens as well.

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -68,3 +68,18 @@
     }
   }
 }
+
+#searchf .input-group {
+  width:100%;
+}
+
+@media (min-width: $screen-sm-min) {
+  #searchf .input-group .input-group-addon, #searchf .input-group .input-group-btn, #searchf .input-group .form-control {
+    width:0;
+  }
+}
+@media (min-width: $screen-sm-min) {
+  #searchf .input-group > .form-control {
+    width:100%;
+  }
+}
