--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -22,7 +22,7 @@
       %ul.nav.navbar-nav.navbar-right
         %li
           - if user_signed_in?
-            %li(class="dropdown hidden-sm")
+            %li(class="dropdown")
               %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
                 = owner_image(current_user, 20, false)
                 = current_user.nickname
