--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -69,17 +69,17 @@
   }
 }
 
-#searchf .input-group {
+#nav-search-form .input-group {
   width:100%;
 }
 
 @media (min-width: $screen-sm-min) {
-  #searchf .input-group .input-group-addon, #searchf .input-group .input-group-btn, #searchf .input-group .form-control {
+  #nav-search-form .input-group .input-group-addon, #nav-search-form .input-group .input-group-btn, #nav-search-form .input-group .form-control {
     width:0;
   }
 }
 @media (min-width: $screen-sm-min) {
-  #searchf .input-group > .form-control {
+  #nav-search-form .input-group > .form-control {
     width:100%;
   }
 }
