--- a/app/views/scrapers/_history.html.haml
+++ b/app/views/scrapers/_history.html.haml
@@ -7,7 +7,8 @@
         = render partial: "runs/history", locals: {run: run}
       %li.list-group-item.text-center ...
       = render partial: 'scrapers/scraper_created_history_item', locals: {scraper: scraper}
-    %p.text-center Show complete history
+    %p.text-center
+      = link_to 'Show complete history', history_scraper_path(scraper)
   - else
     %ul.list-group
       - scraper.finished_runs.each do |run|
