--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -69,21 +69,4 @@
       = pluralize(@owner.other_scrapers_contributed_to.count, "scraper")
     .list-group= sync partial: "scraper", collection: @owner.other_scrapers_contributed_to
 
-  %h3 Statistics
-  - if @owner.user?
-    %p
-      Watching:
-      - if @owner.alerts.empty?
-        no scrapers
-      - else
-        = link_to "#{pluralize(@owner.all_scrapers_watched.count, 'scrapers')}", watching_user_path(@owner)
-  - unless @scrapers.empty?
-    %p
-      Total run time used:
-      = duration_of_time_in_words(@owner.wall_time)
-    %p
-      Total cpu time used:
-      = duration_of_time_in_words(@owner.cpu_time)
-    %p
-      Total disk space used:
-      = number_to_human_size(@owner.total_disk_usage)
+  = render partial: 'statistics', locals: {owner: @owner, scrapers: @scrapers}
