--- a/app/views/static/_vanity_stats.html.haml
+++ b/app/views/static/_vanity_stats.html.haml
@@ -2,12 +2,12 @@
   .container
     %h3 This week at morph.io
     - cache 'vanity_stats', :expires_in => 1.hour do
-      .metric-box.col-sm-4
-        %strong= number_with_delimiter(Morph::VanityStats.total_pages_scraped_in_last_week)
-        web pages scraped
-      .metric-box.col-sm-4
+      -# .metric-box.col-sm-4
+      -#   %strong= number_with_delimiter(Morph::VanityStats.total_pages_scraped_in_last_week)
+      -#   web pages scraped
+      .metric-box.col-sm-6
         %strong= number_with_delimiter(Morph::VanityStats.total_database_rows_updated_in_last_week)
         rows of data collected
-      .metric-box.col-sm-4
+      .metric-box.col-sm-6
         %strong= number_with_delimiter(Morph::VanityStats.total_api_queries_in_last_week)
         downloads &amp; API queries
