--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -2,6 +2,8 @@
 = simple_form_for @scraper do |f|
   = f.error_notification
   = f.input :auto_run, hint: "Automatically run this scraper once per day", input_html: {disabled: !(can? :update, @scraper)}
+  - if can? :memory_setting, @scraper
+    = f.input :memory_mb, hint: "If set overrides the default memory in megabytes allocated to this scraper (#{Morph::DockerRunner.default_memory_limit_mb}). This is currently only available to admins and should be used with caution because scheduling currently assumes everything is using the same amount of memory"
   %h4 Secret environment variables
   %p
     Environment variables can be used to pass secret values to your scraper such as API keys.
